--- a/testtrinity/pubspec.yaml
+++ b/testtrinity/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_svg: ^0.22.0
   google_fonts: ^2.3.1
   flutter_screenutil: ^5.7.0
+  intl: any
 
 dev_dependencies:
   flutter_lints: any
