--- a/testtrinity/pubspec.yaml
+++ b/testtrinity/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   google_fonts: ^2.3.1
   flutter_screenutil: ^5.7.0
   intl: any
+  shared_preferences: ^2.0.17
 
 dev_dependencies:
   flutter_lints: any
