feat: add a little unit tests, using clean architecture also

--- a/testtrinity/pubspec.yaml
+++ b/testtrinity/pubspec.yaml
@@ -22,6 +22,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: any
+  mocktail: any
 
 flutter_icons:
   android: true
