feat: change app icons and app name

--- a/testtrinity/ios/Runner/Info.plist
+++ b/testtrinity/ios/Runner/Info.plist
@@ -13,7 +13,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>testtrinity</string>
+	<string>Private Contact</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
