--- a/testtrinity/android/app/src/main/AndroidManifest.xml
+++ b/testtrinity/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.testtrinity.testtrinity">
    <application
-        android:label="testtrinity"
+        android:label="Private Contact"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
