--- a/testtrinity/pubspec.yaml
+++ b/testtrinity/pubspec.yaml
@@ -27,7 +27,7 @@ dev_dependencies:
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/icons/icon_home.svg"
+  image_path: "assets/images/img_app_launch.png"
 
 flutter:
   uses-material-design: true
